@@ -55,12 +55,16 @@ apt (0.8.16~exp14) UNRELEASED; urgency=low
     - do not sed in configure.in to set the version-number
   * prepare-release:
     - add as a small script to lazy check and prepare releases
+  * doc/*:
+    - move the command synopsis out of each manpage into apt-verbatim.ent
+      as they are a hell to translate and just single out the parameters
+      which can be translated to apt.ent
 
   [ Bogdan Purcareata ]
   * doc/apt-get.8.xml:
     - add 'download' to the usage line (Closes: #649340)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 04 Apr 2012 22:41:13 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 05 Apr 2012 11:22:34 +0200
 
 apt (0.8.16~exp13) experimental; urgency=low
 
